styles.css
* {
    margin :0px;
}

body{
background-color:antiquewhite;
text-align:center;
}


.product {
    margin: 2rem;
    padding-bottom: 1.5rem;
    border-radius:10px;
    display:grid;
    background-color: hsl(0, 0%, 100%);
    text-align: left;
    max-width: 600px;

}

.product__content {
    display:grid;
    gap: 1rem;
    padding:1rem;
    flex-wrap: wrap;
}

.product__image {
 width: 100%;
 border-top-right-radius: 10px;
 border-radius: 10px 10px 0px 0px
}

/*imported fonts*/
@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,700;1,9..144,700&family=Montserrat:wght@500;700&display=swap');

.product__category {
font-family: 'Montserrat', sans-serif;
font-size:12px;
font-weight:400;
color: hsl(228, 12%, 48%);
letter-spacing: 5px;
}

.product__title {
    font-family: 'Fraunces', 
}


.product__description {
    font-size: 14px;
    line-height: 1.5rem;
    font-family: 'Montserrat', sans-serif;
    color: hsl(228, 12%, 48%)
}

.flex-group {
display:flex;
flex-direction: row;
gap: 1.75rem;
}

.original-price{
    position:relative;
    top:10px;
}

.current-price {
    font-family: 'Fraunces';
    font-size: 2.5rem;
    color:hsl(158, 36%, 37%);
}

.button {
    background-color:hsl(158, 36%, 37%);
    color:hsl(0, 0%, 100%);
    font-family:'Montserrat', sans-serif;
    border-radius: 5px;
    height: 3rem;
}

